fix: text size & y-overflow, issue #99

--- a/src/assets/styles/map/popup.css
+++ b/src/assets/styles/map/popup.css
@@ -53,7 +53,7 @@
       right: 0;
       bottom: 0;
       margin: auto;
-      overflow: auto;
+      overflow-y: hidden;
       padding: 1rem;
       border: solid;
       border-radius: 1rem;
@@ -96,7 +96,7 @@
   word-break: break-word;
   white-space: normal;
   overflow-wrap: anywhere;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   font-weight: 700;
   color: #222;
   text-align: left;
